--- a/TDSM-WarpDrive/TDSM-WarpDrive.csproj
+++ b/TDSM-WarpDrive/TDSM-WarpDrive.csproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -33,22 +33,29 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+    <Reference Include="System">
+    </Reference>
     <Reference Include="Terraria_Server, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Terraria_Server.exe</HintPath>
     </Reference>
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml">
+    </Reference>
     <Reference Include="System.Core">
     </Reference>
-    <Reference Include="System.Data" />
+    <Reference Include="System.Data">
+    </Reference>
     <Reference Include="System.Data.Linq">
     </Reference>
     <Reference Include="System.Data.DataSetExtensions">
     </Reference>
-    <Reference Include="Passport, Version=1.1.24.32567, Culture=neutral, PublicKeyToken=null">
+    <Reference Include="Vault, Version=1.0.24.30690, Culture=neutral, PublicKeyToken=null">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\TDSM-Passport\TDSM-Passport\bin\Debug\Passport.dll</HintPath>
+      <HintPath>..\..\TDSM-Vault\TDSM-Vault\bin\Release\Vault.dll</HintPath>
+    </Reference>
+    <Reference Include="Passport, Version=1.3.24.24974, Culture=neutral, PublicKeyToken=null">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\TDSM-Passport\TDSM-Passport\bin\Release\Passport.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +65,8 @@
     <Compile Include="WarpDriveEngine.cs" />
     <Compile Include="Warp.cs" />
     <Compile Include="PropertiesFile.cs" />
+    <Compile Include="WarpList.cs" />
+    <Compile Include="SerializableDictionary.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
